--- a/.github/workflows/spotbugs.yml
+++ b/.github/workflows/spotbugs.yml
@@ -2,7 +2,7 @@ name: Spotbugs
 on: ["push"]
 
 jobs:
-  test-core:
+  spotbugs-core:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -12,17 +12,17 @@ jobs:
           java-version: 1.8
       - name: Build with Gradle
         run: ./gradlew core:spotbugsMain --no-daemon --stacktrace
-  test-data-jdbc:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Gradle
-        run: ./gradlew data-jdbc:spotbugsMain --no-daemon --stacktrace
-  test-redis:
+#  spotbugs-data-jdbc:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v1
+#      - name: Set up JDK 1.8
+#        uses: actions/setup-java@v1
+#        with:
+#          java-version: 1.8
+#      - name: Build with Gradle
+#        run: ./gradlew data-jdbc:spotbugsMain --no-daemon --stacktrace
+  spotbugs-redis:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
