--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,16 +5,6 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Gradle
-        run: ./gradlew test --no-daemon --stacktrace
   publish-core:
     runs-on: ubuntu-latest
     steps:
@@ -27,7 +17,7 @@ jobs:
         env:
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
           BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
-        run: ./gradlew core:bintrayUpload --no-daemon --stacktrace
+        run: ./gradlew core:test core:spotbugsMain core:bintrayUpload core:publish --no-daemon --stacktrace
   publish-data-jdbc:
     runs-on: ubuntu-latest
     steps:
@@ -40,7 +30,7 @@ jobs:
         env:
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
           BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
-        run: ./gradlew data-jdbc:bintrayUpload --no-daemon --stacktrace
+        run: ./gradlew data-jdbc:test data-jdbc:bintrayUpload data-jdbc:publish --no-daemon --stacktrace
   publish-redis:
     runs-on: ubuntu-latest
     steps:
@@ -53,4 +43,4 @@ jobs:
         env:
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
           BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
-        run: ./gradlew redis:bintrayUpload --no-daemon --stacktrace
+        run: ./gradlew redis:test redis:spotbugsMain redis:bintrayUpload redis:upload --no-daemon --stacktrace
