--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -1,8 +1,8 @@
-name: Spotbugs
+name: core
 on: ["push"]
 
 jobs:
-  spotbugs-core:
+  spotbugs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -12,17 +12,7 @@ jobs:
           java-version: 1.8
       - name: Build with Gradle
         run: ./gradlew core:spotbugsMain --no-daemon --stacktrace
-#  spotbugs-data-jdbc:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v1
-#      - name: Set up JDK 1.8
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 1.8
-#      - name: Build with Gradle
-#        run: ./gradlew data-jdbc:spotbugsMain --no-daemon --stacktrace
-  spotbugs-redis:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -31,4 +21,4 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Gradle
-        run: ./gradlew redis:spotbugsMain --no-daemon --stacktrace
+        run: ./gradlew core:test --no-daemon --stacktrace
