--- a/.github/workflows/redis.yml
+++ b/.github/workflows/redis.yml
@@ -1,8 +1,8 @@
-name: Test
+name: redis
 on: ["push"]
 
 jobs:
-  test-core:
+  spotbugs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -11,18 +11,8 @@ jobs:
         with:
           java-version: 1.8
       - name: Build with Gradle
-        run: ./gradlew core:test --no-daemon --stacktrace
-  test-data-jdbc:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Gradle
-        run: ./gradlew data-jdbc:test --no-daemon --stacktrace
-  test-redis:
+        run: ./gradlew redis:spotbugsMain --no-daemon --stacktrace
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
