--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -5,6 +5,8 @@ bintray {
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
     publications = ['Publication']
+    publish(true)
+    override = true
     pkg {
         repo = 'micronaut'
         name = "${rootProject.name}-${project.name}"
