--- a/data-jdbc/src/main/resources/application-test.yml
+++ b/data-jdbc/src/main/resources/application-test.yml
@@ -1,6 +1,9 @@
 datasources:
-  lock:
+  foo:
     url: jdbc:tc:postgresql:12:///distlock
     driverClassName: org.testcontainers.jdbc.ContainerDatabaseDriver
     schema-generate: CREATE_DROP
     dialect: postgres
+micronaut:
+  distributed-lock:
+    database-name: foo
