--- a/data-jdbc/build.gradle
+++ b/data-jdbc/build.gradle
@@ -7,9 +7,8 @@ dependencies {
     implementation "jakarta.persistence:jakarta.persistence-api:2.2.2"
     testRuntime "io.micronaut.sql:micronaut-jdbc-hikari"
     testImplementation 'io.micronaut.configuration:micronaut-flyway:1.2.0'
-    testImplementation "org.testcontainers:spock:1.14.1"
-    testRuntime "org.testcontainers:postgresql:1.14.1"
-    testRuntime "org.testcontainers:mysql:1.14.1"
+    testImplementation "org.testcontainers:spock:$testcontainersVersion"
+    testRuntime "org.testcontainers:mysql:$testcontainersVersion"
     testRuntime "org.postgresql:postgresql:42.2.14"
     testRuntime "mysql:mysql-connector-java:8.0.19"
     implementation project(":core")
