Replace Bintray by Github Packages
Fix issue in testcontainers-java (https://github.com/testcontainers/testcontainers-java/issues/3574)

--- a/data-jdbc/build.gradle
+++ b/data-jdbc/build.gradle
@@ -16,4 +16,4 @@ dependencies {
     testImplementation project(":core").sourceSets.test.output
 }
 
-bintrayUpload.dependsOn('clean', 'test')
+publish.dependsOn('clean', 'test')
