--- a/redis/build.gradle
+++ b/redis/build.gradle
@@ -7,4 +7,4 @@ dependencies {
     testImplementation project(":core").sourceSets.test.output
 }
 
-bintrayUpload.dependsOn('clean', 'test')
+publish.dependsOn('clean', 'test')
