--- a/gradle/publish.gradle
+++ b/gradle/publish.gradle
@@ -1,27 +1,18 @@
 apply plugin: "maven-publish"
-apply plugin: "com.jfrog.bintray"
-
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    publications = ['Publication']
-    publish(true)
-    override = true
-    pkg {
-        repo = 'micronaut'
-        name = "${rootProject.name}-${project.name}"
-        userOrg = 'uberall'
-        licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/uberall/micronaut-distributed-lock'
-        issueTrackerUrl = 'https://github.com/uberall/micronaut-distributed-lock/issues'
-        githubRepo = 'uberall/micronaut-distributed-lock'
-        publicDownloadNumbers = true
-    }
-}
 
 publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/uberall/micronaut-distributed-lock")
+            credentials {
+                username = System.getenv("GITHUB_USER") ?: project.findProperty("gpr.user")
+                password = System.getenv("GITHUB_TOKEN") ?: project.findProperty("gpr.key")
+            }
+        }
+    }
     publications {
-        Publication(MavenPublication) {
+        mavenJava(MavenPublication) {
             from components.java
             artifactId "${rootProject.name}-${project.name}"
             version libVersion
