Upgrades to micronaut 3.5 + gradle 7.5.1

--- a/redis/build.gradle
+++ b/redis/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     implementation("io.micronaut.redis:micronaut-redis-lettuce")
-    testCompile "org.testcontainers:spock:$testcontainersVersion"
+    testImplementation "org.testcontainers:spock:$testcontainersVersion"
 
     implementation project(":core")
 
