--- a/data-jdbc/build.gradle
+++ b/data-jdbc/build.gradle
@@ -4,13 +4,14 @@ dependencies {
 
     annotationProcessor "io.micronaut.data:micronaut-data-processor:$micronautDataVersion"
     implementation "io.micronaut.data:micronaut-data-jdbc:$micronautDataVersion"
-    implementation "jakarta.persistence:jakarta.persistence-api:2.2.2"
-    testRuntime "io.micronaut.sql:micronaut-jdbc-hikari"
-    testImplementation 'io.micronaut.configuration:micronaut-flyway:1.2.0'
+    implementation "jakarta.persistence:jakarta.persistence-api:3.0.0"
+    testRuntimeOnly "io.micronaut.sql:micronaut-jdbc-hikari"
+    testImplementation 'io.micronaut.flyway:micronaut-flyway'
+    testImplementation 'org.flywaydb:flyway-mysql'
     testImplementation "org.testcontainers:spock:$testcontainersVersion"
-    testRuntime "org.testcontainers:mysql:$testcontainersVersion"
-    testRuntime "org.postgresql:postgresql:42.2.14"
-    testRuntime "mysql:mysql-connector-java:8.0.19"
+    testRuntimeOnly "org.testcontainers:mysql:$testcontainersVersion"
+    testRuntimeOnly "org.postgresql:postgresql:42.5.0"
+    testRuntimeOnly "mysql:mysql-connector-java:8.0.30"
     implementation project(":core")
 
     testImplementation project(":core").sourceSets.test.output
