Upgrade to micronaut 4.2
this update includes:
* latest micronaut-data
* switch away from jackson to micronaut-serde
* proper usage of new core-pom and library plugin
* add quodana configuration for local code analysis

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,11 @@ plugins {
     id "groovy"
     id 'maven-publish'
     id "com.diffplug.eclipse.apt" version "3.37.2"
+    id("io.micronaut.library") version "4.2.0"
+}
+
+repositories {
+    mavenCentral()
 }
 
 subprojects {
@@ -25,8 +30,8 @@ subprojects {
     }
 
     java {
-        sourceCompatibility = JavaVersion.toVersion('1.8')
-        targetCompatibility = JavaVersion.toVersion('1.8')
+        sourceCompatibility = JavaVersion.toVersion('17')
+        targetCompatibility = JavaVersion.toVersion('17')
         withSourcesJar()
         withJavadocJar()
     }
