Revert "Upgrade to micronaut 4.2"

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,4 @@
 
 rootProject.name = 'micronaut-distributed-lock'
 
-include 'core'
-include 'redis'
-include 'data-jdbc'
+include 'core', 'redis', 'data-jdbc'
